--- a/style.css
+++ b/style.css
@@ -170,6 +170,7 @@ body{
 .project > img{
   width: 500px;
   /* height: 300px; */
+  /* height: 300px; */
   box-shadow: 0px 0px 42px 0px rgba(179,179,179,1);
 
 }
