more responsive site + add more to  about me

--- a/style.css
+++ b/style.css
@@ -246,8 +246,6 @@ footer img{
 }
 
 
-
-
 /* About Page  */
 .about-me-wrapper{
   display: flex;
@@ -261,8 +259,8 @@ footer img{
 
 .about-me-text{
   line-height: 1.5;
-
-  left:0;
+  font-size: 17px;
+  /* left:0; */
   width: 50%;
   /* border: solid 2px red; */
   box-sizing: border-box;
@@ -275,22 +273,32 @@ footer img{
   /* Vertical Alignment */
   align-items: center;
   justify-content: center;
-  right: 0;
+  /* right: 0; */
   width: 50%;
 
   box-sizing: border-box;
-  border: solid 2px blue;
+  /* border: solid 2px blue; */
 }
 
 .about-me-profile >  #pic{
-  max-height: 400px;
+  max-height: 450px;
+}
+
+@media only screen and (min-width: 1500px) {
+  .project-description{
+    width: 700px;
+  }
+
+  .project > img{
+    width: 700px;
+  }
 }
 
 @media only screen and (max-width: 1000px) {
   /* About Me Page */
   .about-me-wrapper{
     justify-content: center;
-    flex-direction: column-reverse;
+    flex-direction: column;
   }
   .about-me-text{
     width: 100%;
@@ -326,6 +334,8 @@ footer img{
   }
 
   .background{
+    /* right:0;
+    width: 60%; */
     display: none;
   }
   /* .text-wrapper, .profile, .background{
