new layout for projects :)

--- a/style0.css
+++ b/style0.css
@@ -160,55 +160,23 @@ a{
 
 
 .project{
-  /* border: solid 2px red; */
   margin: 40px;
-  width: 80%;
 
   display: flex;
-  justify-content: center;
+  flex-direction: column;
 
   opacity: 0;
   transform: translate(0, 20px);
   transition: all 1s;
 }
 
-
-
-
-.project-reverse{
-  flex-direction: row-reverse;
-}
-.project-reverse > .project-description{
-  margin-left:0px;
-  margin-right: 50px;
-}
-
-
-.project-name{
-  font-size: 25px;
-}
-
-.project-img{
-  /* border: solid 2px red; */
-  width: 700px;
-  height: auto;
-  box-shadow: 0px 0px 42px 0px rgba(179,179,179,1);
-}
-
-
 .project.visible {
-  opacity: 1;
-  transform: translate(0, 0);
+opacity: 1;
+transform: translate(0, 0);
 }
 
 .project-description{
-  /* border: solid 2px red; */
   width: 500px;
-  padding: 20px;
-  margin: auto;
-  margin-left: 50px;
-  align-items: center;
-  position: relative;
 }
 
 .project-position{
@@ -224,65 +192,20 @@ a{
 }
 
 
-.learn-more{
-  /* position: absolute; */
-  text-align: center;
-  width: 220px;
-  height: 50px;
-  color:black;
-
-  border: black 2px solid;
-
-  /* background-color: #EBEBEB; */
-  transition: 0.3s;
+.learn-more:hover {
+  text-decoration: underline;
 }
 
-.learn-more:hover{
-  color:white;
-  background-color: black;
+.project > img{
+  width: 500px;
+  /* height: 300px; */
+  /* height: 300px; */
+  box-shadow: 0px 0px 42px 0px rgba(179,179,179,1);
 }
 
-#include-title{
-  color:#32BC9B;
-}
-
-#include{
-  color: #32BC9B;
-  border: #32BC9B 2px solid;
-}
-
-#include:hover{
-  color:white;
-  background-color:#32BC9B;
-}
-
-#spotify-title{
-  color: #28B955;
-}
-
-#spotify{
-  color: #28B955;
-  border: #28B955 2px solid;
-}
-
-#spotify:hover{
-  color:white;
-  background-color:#28B955;
-}
-
-
-#hack-club-title{
-  color: #E42D44;
-}
 
 #hack-club{
-  color: #E42D44;
-  border: #E42D44 2px solid;
-}
-
-#hack-club:hover{
-  color:white;
-  background-color:#E42D44;
+  color: #E42D42;
 }
 
 
@@ -456,6 +379,14 @@ footer img{
     display: none;
   }
 
+}
+
+@media only screen and (max-width: 600px) {
+
+  /* svg{
+    border: solid 2px red;
+  } */
+
   .name{
     margin-top:40%;
     text-align: left;
@@ -465,6 +396,7 @@ footer img{
   }
 
   .description{
+
     margin-top:0px;
     font-size:40px;
   }
@@ -483,25 +415,17 @@ footer img{
     margin-top: 0px;
   }
 
-  .experience-wrapper{
+  .experience-wrapper,{
     flex-direction: column;
   }
 
 
-  .project{
-    /* border: solid 2px red; */
-    flex-direction: column;
-  }
 
 
-  .project-position{
-    flex-direction: column;
-  }
+  /* .project-name{
+    font-size: 20px;
+  } */
 
-  .project-description{
-    width: 80%;
-    margin: auto !important;
-  }
 
   .project > img{
     /* width: 500px; */
@@ -509,9 +433,6 @@ footer img{
     height: auto;
     margin: auto;
   }
-}
-
-@media only screen and (max-width: 600px) {
 
   .about-me-wrapper{
     margin-top:10%;
