--- a/style.css
+++ b/style.css
@@ -154,6 +154,7 @@ a{
   /* border: solid 2px red; */
   /* height: 100vh; */
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 }
 
@@ -162,7 +163,7 @@ a{
   /* border: solid 2px red; */
   margin-top: 60px;
   margin-bottom: 60px;
-  width: 100%;
+  width: 80%;
 
   display: flex;
   justify-content: center;
@@ -475,6 +476,7 @@ footer img{
 
 
   .project{
+    width: 100%;
     /* border: solid 2px blue; */
     flex-direction: column;
   }
@@ -505,21 +507,22 @@ footer img{
 
 
 
-@media only screen and (max-width: 800px) {
-  .background{
-  /* right:0;
-  width: 60%; */
-    display: none;
-  }
-  /* .text-wrapper, .profile, .background{
-  display: none;
-  } */
+@media only screen and (max-width: 900px) {
 
-  .profile{
-    /* width: 300px;
-    height: 300px; */
-    display: none;
-  }
+
+.background{
+/* right:0;
+width: 60%; */
+  display: none;
+}
+/* .text-wrapper, .profile, .background{
+display: none;
+} */
+
+.profile{
+  /* width: 300px;
+  height: 300px; */
+  display: none;
 }
 
 @media only screen and (max-width: 600px) {
