--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ a{
   left: 50%;
   top: 15%;
 
-  background: url(img/IMG_0094.JPG);
+  background: url(img/profile-picture.JPG);
   background-position: center;
   background-size: cover;
 }
@@ -142,7 +142,7 @@ a{
   top: 0px;
 
   z-index: -2;
-  background: url(img/IMG_0411.JPG);
+  background: url(img/mountains.JPG);
   background-position: center;
   background-size: cover;
 }
@@ -186,7 +186,7 @@ a{
 
 
 .project-name{
-  font-size: 25px;
+  font-size: 40px;
 }
 
 .project-img{
@@ -210,6 +210,11 @@ a{
   margin-left: 50px;
   align-items: center;
   position: relative;
+}
+
+.project-description p {
+
+font-size: 17px;
 }
 
 .project-position{
@@ -375,14 +380,15 @@ footer img{
 }
 
 .resume-button{
+  /* text-transform: uppercase; */
   position: absolute;
   text-align: center;
-  width: 220px;
-  height: 49px;
+  width: 230px;
+  line-height: normal;
+  height: 50px;
   color:#2698EC;
 
   border: solid 2px #2698EC;
-
   transition: 0.3s;
 }
 
@@ -399,12 +405,27 @@ footer img{
 .project-banner{
   width: 100%;
   height: 500px;
-  background-image:url("img/include.png");
   background-repeat: no-repeat;
   background-position: center;
 }
 
+.include-banner{
+  background-image:url("img/include.png");
+  background-size: cover;
+}
+
+.homeless-banner{
+  background-image:url("img/homeless.jpg");
+  background-size: cover;
+}
+
+.hack-club-banner{
+  background-image:url("img/hack-club.jpg");
+  background-size: cover;
+}
+
 .project-heading{
+  line-height: 2;
   margin-top:5%;
   text-align: center;
   line-height: 90%;
@@ -414,9 +435,21 @@ footer img{
   color: #1BBE9C;
 }
 
+.project-heading > #homeless-page {
+  color: black;
+}
+
+.project-heading > #hack-club-page {
+  color: #E42D44;
+}
 
 .project-heading > h1{
   font-size: 40px;
+}
+
+
+.project-heading > h2 > a{
+  color: #2698EC;
 }
 
 .project-heading > h3{
@@ -424,7 +457,9 @@ footer img{
 }
 
 
+
 .project-body-text{
+  line-height: 1.5;
   /* border: solid 2px red; */
   /* margin-top:5%; */
   font-size: 18px;
@@ -443,6 +478,12 @@ footer img{
   margin-right: 5%;
 }
 
+.project-body-text > h3{
+  margin-left: 5%;
+  margin-right: 5%;  
+}
+
+
 .image{
   /* position: relative; */
   /* text-align: center; */
@@ -455,6 +496,8 @@ footer img{
   display: block;
   margin: auto;
 }
+
+
 
 
 
@@ -488,7 +531,12 @@ footer img{
     #pic{
     height: 350px;
   }
-
+  .project > img{
+    /* width: 500px; */
+    width: 60%;
+    height: auto;
+    margin: auto;
+  }
   .about-me-wrapper{
     margin-bottom: 100px;
   }
@@ -595,6 +643,9 @@ footer img{
     height: 300px; */
     display: none;
   }
+
+
+
 }
 
 @media only screen and (max-width: 600px) {
