--- a/style.css
+++ b/style.css
@@ -404,6 +404,8 @@ footer img{
 
 /* Individual Pages */
 .project-banner{
+  word-wrap: break-word;
+
   width: 100%;
   height: 500px;
   background-repeat: no-repeat;
