--- a/style.css
+++ b/style.css
@@ -481,8 +481,7 @@ footer img{
 .project-body-text > h3{
   margin-left: 5%;
   margin-right: 5%;
-  word-wrap: break-word;
-  white-space: initial;
+  width: 100%;
 }
 
 
@@ -745,7 +744,11 @@ footer img{
 
 /* Individual Pages */
   .project-heading{
-    margin:10%;
+    width: 100%;
+    /* border:solid 2px red; */
+    line-height: normal;
+    margin-top:10%;
+    margin-bottom:10%;
   }
 
   .project-heading > h2 > a{
