attempt to fix squsihed text

--- a/style.css
+++ b/style.css
@@ -749,6 +749,11 @@ footer img{
     margin-bottom:10%;
   }
 
+  .project-heading > h1{
+    font-size: 30px;
+    width:100%;
+  }
+
   .project-heading > h2 > a{
     font-size: 18px;
   }
